# pysynthACS

./: .coverage  .gitignore  Cargo.toml  LICENSE.md  README.md  coverage.xml  migration_plan.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
examples/: 01_basic_workflow.py  02_demographic_simulation.py  02_large_scale_optimization.py  03_attribute_augmentation.py
scripts/: migrate_data.py
src/: lib.rs
src/pysynthacs/: __init__.py  config.py
src/pysynthacs/core/: adapter.py  base.py  data.py  diagnostics.py  education.py  generator.py  household.py  population.py  specialized.py
src/pysynthacs/data/: AgeRaceDR.parquet  BR2014.parquet  LifeExp.parquet  MBR.parquet  TFR.parquet  adjDR.parquet  la_hospitals.parquet  rawDR.parquet  stateFR.parquet
src/pysynthacs/simulation/: demographics.py
src/pysynthacs/transforms/: education.py  household.py  population.py
src/pysynthacs/utils/: calc.py
src/pysynthacs/viz/: plotting.py
tests/: test_all_pullers.py  test_basic.py  test_core.py  test_data_migration.py  test_data_structures.py  test_diagnostics.py  test_generator.py  test_integration.py  test_population.py  test_simulation.py  test_viz.py
