[package]
name = "pysynthacs-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pysynthacs_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
rayon = "1.10"
rand = "0.8"
rand_pcg = "0.3"
serde = { version = "1.0", features = ["derive"] }
