[project]
name = "pysynthacs"
version = "1.0.0"
description = "Synthetic Microdata and Spatial MicroSimulation Modeling for ACS Data in Python"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "censusdis",
    "pandas",
    "numpy",
    "scipy",
    "tenacity",
    "tqdm",
    "plotnine",
]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "black",
]

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (undefined names, unused imports, etc.)
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (common bug patterns)
    "C4",  # flake8-comprehensions (cleaner comprehensions)
    "UP",  # pyupgrade (modernize Python syntax)
    "N",   # pep8-naming (naming conventions)
    "RUF", # Ruff-specific rules
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_any_generics = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Automatically include coverage flags when running pytest
addopts = "--cov=pysynthacs --cov-report=xml --cov-report=term-missing"

[tool.coverage.run]
source = ["src/pysynthacs"]
omit = [
    "tests/*",
    "**/__init__.py",
    "scripts/*"
]

[tool.coverage.report]
# Threshold enforcement
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
